--- a/express/index.html
+++ b/express/index.html
@@ -65,7 +65,8 @@
         <input type="submit">
     </form> -->
     <div>
-        <form  action="http://127.0.0.1:3000/formpro" method="get">
+        <!-- <form  action="http://127.0.0.1:3000/formpro" method="get"> -->
+        <form  action="http://127.0.0.1:3000/formpro" method="post">
             <legend>Updation Form</legend>
             <label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Name..."> <br> <br>
